src/objects/TestSf1__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TestSf1</relationshipLabel>
        <relationshipName>TestSf1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>TestSf1</label>
    <nameField>
        <displayFormat>TS1-{00}</displayFormat>
        <label>TestSf1 No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestSf1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>